--- a/xaml/Controls/Search.xaml
+++ b/xaml/Controls/Search.xaml
@@ -1,20 +1,35 @@
 <!--Search -->
-<Grid HorizontalAlignment="Right" Grid.Column="1" VerticalAlignment="Center">
+<Grid HorizontalAlignment="Left" Grid.Column="1" VerticalAlignment="Center">
+
+
     <TextBox Padding="8"
-            Width="100"
+            Width="120"
             VerticalAlignment="Center"
             HorizontalAlignment="Left"
             Style="{StaticResource SearchBox}"
             Name="searchInput" />
 
-            <TextBlock x:Name="SearchIcon" Text="" 
+    <Grid Name="search_placeholder">
+
+        <TextBlock 
+                Text="" 
                 FontSize="15" 
                 Foreground="Gray" 
                 VerticalAlignment="Center" 
                 FontFamily="Segoe MDL2 Assets"
-                Background="Transparent"
                 HorizontalAlignment="Left" 
-                Margin="9,0,0,0" />
+                IsHitTestVisible="False"
+                Margin="8,0,0,0" />
+
+        <TextBlock 
+                Text="Control + F" 
+                Foreground="Gray" 
+                VerticalAlignment="Center" 
+                HorizontalAlignment="Left" 
+                IsHitTestVisible="False"
+                Margin="30,0,0,0" />
+
+    </Grid>
 
 </Grid>
 <!--End Search-->
