--- a/static/Themes/Styles.xaml
+++ b/static/Themes/Styles.xaml
@@ -52,27 +52,39 @@
 <!--End Image Style-->
 
 <!--Button Style-->
-      <Style TargetType="Button">
+    <Style TargetType="Button">
         <Setter Property="Background" Value="{DynamicResource PrimaryButtonForeground}"/>
         <Setter Property="Foreground" Value="{DynamicResource TextColorSecondaryColor2}"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="1"/>
-        
+        <Setter Property="Padding" Value="10,5"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="Cursor" Value="Hand"/>
+
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border CornerRadius="20" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            CornerRadius="25">
                         <ContentPresenter HorizontalAlignment="Center"
-                                            VerticalAlignment="Center"/>
-                        
+                                        VerticalAlignment="Center"
+                                        RecognizesAccessKey="True"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="{DynamicResource HighlightColor}"/>
                 <Setter Property="Foreground" Value="{DynamicResource PrimaryButtonHighlight}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource HighlightColor}"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Background" Value="{DynamicResource PressedButtonColor}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
