--- a/xaml/Views/MainWindow.xaml
+++ b/xaml/Views/MainWindow.xaml
@@ -2,7 +2,9 @@
 <Window
 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-x:Name="Window" Title="Install Tweak Tool #StandWithPalestine" WindowStartupLocation = "CenterScreen" 
+x:Name="Window" 
+Title="Install Tweak Tool #StandWithPalestine" 
+WindowStartupLocation = "CenterScreen" 
 Background="{DynamicResource PrimaryBackgroundColor}"
 Height="700" Width="1000" 
 MinHeight="600" 
