--- a/static/Themes/Styles.xaml
+++ b/static/Themes/Styles.xaml
@@ -80,7 +80,7 @@
 <!--End Button Style-->
 <!--ListViewItem Style-->
     <Style TargetType="ListViewItem">
-        <Setter Property="Margin" Value="3"/>
+        <Setter Property="Margin" Value="5"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="BorderBrush" Value="WhiteSmoke"/>
         <Setter Property="Padding" Value="0"/>
@@ -392,10 +392,11 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="TabItem">
-                    <Border Name="Border" CornerRadius="5" BorderThickness="0,0,0,0" Padding="8" BorderBrush="Transparent"  Margin="5,5">
+                    <Border Name="Border" CornerRadius="5" BorderThickness="0" Padding="8" BorderBrush="Transparent"  Margin="10,5">
                         <ContentPresenter x:Name="ContentSite"
                         VerticalAlignment="Center"
                         HorizontalAlignment="Center"
+                        Width="100"
                         ContentSource="Header"
                         />
                     </Border>
